--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card">
-      <div class="avatar">
-        <img src="https://drive.google.com/uc?export=view&id=1fWtmKFni_4-HbHx9UhzU2KCsqA36pqL7" alt="Magda Szlęzak">
-      </div>
+  <div class="avatar">
+  <img src="avatar.jpg" 
+       alt="Magda Szlęzak" 
+       style="width:100%;height:100%;border-radius:50%;object-fit:cover;">
+</div>
       <h1>Magda Szlęzak</h1>
       <p class="bio">Wokalistka, autorka tekstów i muzyki, nauczyciel śpiewu. Laureatka ogólnopolskich konkursów muzycznych. Aktywnie koncertuje, tworzy i nagrywa. Debiutancki album <strong>„ZLEPEK – CAŁOŚĆ”</strong> już wkrótce ujrzy światło dzienne.</p>
 
@@ -68,3 +68,4 @@
   </div>
 </body>
 </html>
+
