--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        style="width:100%;height:100%;border-radius:50%;object-fit:cover;">
 </div>
       <h1>Magda Szlęzak</h1>
-      <p class="bio">Wokalistka, autorka tekstów i muzyki, nauczyciel śpiewu. Laureatka ogólnopolskich konkursów muzycznych. Aktywnie koncertuje, tworzy i nagrywa. Debiutancki album <strong>„ZLEPEK – CAŁOŚĆ”</strong> już wkrótce ujrzy światło dzienne.</p>
+      <p class="bio">Wokalistka, autorka tekstów i muzyki. Laureatka ogólnopolskich konkursów muzycznych. Aktywnie koncertuje, tworzy i nagrywa. Debiutancki album <strong>„ZLEPEK – CAŁOŚĆ”</strong> już wkrótce ujrzy światło dzienne.</p>
 
       <div class="links">
         <a class="link" href="https://www.youtube.com/@magda.szlezak" target="_blank">
@@ -68,4 +68,5 @@
   </div>
 </body>
 </html>
+
 
