--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   </style>
 </head>
 <body>
-  <div class="avatar">
+ <div class="avatar">
   <img src="avatar.jpg" 
        alt="Magda Szlęzak" 
        style="width:100%;height:100%;border-radius:50%;object-fit:cover;">
+</div>
 </div>
       <h1>Magda Szlęzak</h1>
       <p class="bio">Wokalistka, autorka tekstów i muzyki. Laureatka ogólnopolskich konkursów muzycznych. Aktywnie koncertuje, tworzy i nagrywa. Debiutancki album <strong>„ZLEPEK – CAŁOŚĆ”</strong> już wkrótce ujrzy światło dzienne.</p>
@@ -68,5 +69,6 @@
   </div>
 </body>
 </html>
+
 
 
